Bug 233410 - Collection statistics for new folders show -1 unread mails
Summary: Collection statistics for new folders show -1 unread mails
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords: akonadi-ports-regression
: 233411 233412 (view as bug list)
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-04-05 20:14 UTC by Thomas McGuire
Modified: 2010-05-16 00:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-05 20:14:06 UTC
To reproduce, switch of the unread column, then create a new subfolder.
I created a new subfolder of sent-mail, and it now shows "sent-mail (0 + -1)"
Comment 1 Thomas McGuire 2010-04-05 20:40:54 UTC
*** Bug 233411 has been marked as a duplicate of this bug. ***
Comment 2 Thomas McGuire 2010-04-05 20:41:00 UTC
*** Bug 233412 has been marked as a duplicate of this bug. ***
Comment 3 Thomas McGuire 2010-04-06 09:56:44 UTC
This is maybe a model, view, or delegate bug, so adding Steve to CC list.
Comment 4 Volker Krause 2010-05-16 00:15:20 UTC
SVN commit 1127232 by vkrause:

Ignore invalid CollectionStatistics objects when calculating the
recursive counts.

BUG: 233410


 M  +1 -1      collectionstatisticsdelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1127232