Ignore invalid CollectionStatistics objects when calculating the recursive counts.

BUG: 233410

svn path=/trunk/KDE/kdepimlibs/; revision=1127232